[gd_scene load_steps=8 format=3 uid="uid://qa4wk616efql"]

[ext_resource type="Script" uid="uid://drgjfvc5us8fu" path="res://entities/aim/aim.gd" id="1_abbam"]
[ext_resource type="Texture2D" uid="uid://bs8llnm6y16qn" path="res://assets/hud/aim/aim.png" id="2_5tysk"]
[ext_resource type="Texture2D" uid="uid://ctln3pqhd8eo5" path="res://assets/hud/aim/bullet.png" id="3_7hkt2"]
[ext_resource type="Texture2D" uid="uid://cb4l525hynp0g" path="res://assets/hud/aim/bullet_frame.png" id="4_idher"]
[ext_resource type="Script" uid="uid://bmgylt6et11vv" path="res://entities/aim/target_tracker.gd" id="5_5tysk"]
[ext_resource type="Texture2D" uid="uid://vxdp45uyuatd" path="res://assets/hud/aim/aim_center.png" id="5_7hkt2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wflsq"]

[node name="Aim" type="Node2D"]
texture_filter = 1
script = ExtResource("1_abbam")

[node name="Visuals" type="Node2D" parent="."]

[node name="BarrelAim" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_5tysk")

[node name="BulletSprites" type="Node2D" parent="Visuals"]
unique_name_in_owner = true

[node name="BulletAim" type="Sprite2D" parent="Visuals/BulletSprites"]
position = Vector2(-0.000499559, -138)
texture = ExtResource("3_7hkt2")

[node name="BulletAim2" type="Sprite2D" parent="Visuals/BulletSprites"]
position = Vector2(119.511, -69.0001)
texture = ExtResource("3_7hkt2")

[node name="BulletAim3" type="Sprite2D" parent="Visuals/BulletSprites"]
position = Vector2(119.511, 69.0001)
texture = ExtResource("3_7hkt2")

[node name="BulletAim4" type="Sprite2D" parent="Visuals/BulletSprites"]
position = Vector2(0.000849414, 138)
texture = ExtResource("3_7hkt2")

[node name="BulletAim5" type="Sprite2D" parent="Visuals/BulletSprites"]
position = Vector2(-119.511, 69.0005)
texture = ExtResource("3_7hkt2")

[node name="BulletAim6" type="Sprite2D" parent="Visuals/BulletSprites"]
position = Vector2(-119.512, -68.9998)
texture = ExtResource("3_7hkt2")

[node name="Frame" type="Sprite2D" parent="Visuals"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("4_idher")

[node name="AimCenter" type="Sprite2D" parent="Visuals"]
texture = ExtResource("5_7hkt2")

[node name="Bullets" type="Node2D" parent="."]
unique_name_in_owner = true
rotation = -1.5708

[node name="Slot" type="Node2D" parent="Bullets"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Bullets/Slot"]
position = Vector2(138, 0)
remote_path = NodePath("../../../Visuals/BulletSprites/BulletAim")
update_rotation = false
update_scale = false

[node name="Slot2" type="Node2D" parent="Bullets"]
rotation = 1.0472

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Bullets/Slot2"]
position = Vector2(138, 0)
remote_path = NodePath("../../../Visuals/BulletSprites/BulletAim2")
update_rotation = false
update_scale = false

[node name="Slot3" type="Node2D" parent="Bullets"]
rotation = 2.0944

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Bullets/Slot3"]
position = Vector2(138, 0)
remote_path = NodePath("../../../Visuals/BulletSprites/BulletAim3")
update_rotation = false
update_scale = false

[node name="Slot4" type="Node2D" parent="Bullets"]
rotation = 3.14159

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Bullets/Slot4"]
position = Vector2(138, 0)
remote_path = NodePath("../../../Visuals/BulletSprites/BulletAim4")
update_rotation = false
update_scale = false

[node name="Slot5" type="Node2D" parent="Bullets"]
rotation = 4.18879

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Bullets/Slot5"]
position = Vector2(138, 0)
remote_path = NodePath("../../../Visuals/BulletSprites/BulletAim5")
update_rotation = false
update_scale = false

[node name="Slot6" type="Node2D" parent="Bullets"]
rotation = 5.23599

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Bullets/Slot6"]
position = Vector2(138, 0)
remote_path = NodePath("../../../Visuals/BulletSprites/BulletAim6")
update_rotation = false
update_scale = false

[node name="ShootCollisionArea" type="Area2D" parent="."]

[node name="AimShape" type="CollisionShape2D" parent="ShootCollisionArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_wflsq")

[node name="TargetTracker" type="Node" parent="." node_paths=PackedStringArray("tracker_area")]
script = ExtResource("5_5tysk")
tracker_area = NodePath("../ShootCollisionArea")
metadata/_custom_type_script = "uid://bmgylt6et11vv"
